--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.4",
     "firebase-admin": "~5.8.1",
     "firebase-functions": "^0.8.1",
-    "lodash.isempty": "^4.4.0"
+    "lodash.isempty": "^4.4.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "typescript": "^2.5.3"
