Add getRandomRaffleWinner and confirmRaffleWinners

--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,8 @@
     "firebase-admin": "~5.8.1",
     "firebase-functions": "^0.8.1",
     "lodash.isempty": "^4.4.0",
+    "lodash.random": "^3.2.0",
+    "lodash.shuffle": "^4.2.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
