--- a/functions/package.json
+++ b/functions/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "cors": "^2.8.4",
     "date-fns": "^1.29.0",
-    "firebase-admin": "~5.8.1",
-    "firebase-functions": "^0.8.1",
+    "firebase-admin": "^5.11.0",
+    "firebase-functions": "^1.0.1",
     "lodash.isempty": "^4.4.0",
     "lodash.random": "^3.2.0",
     "lodash.shuffle": "^4.2.0",
